crates/strider/tests/snapshots/v2__aarch64be__complex__dispatch_on_flag.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "10" -> "7" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "11" -> "7" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "12" [label="φ q1", shape=house, fillcolor="#163030"];
  "5" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v14" [color="#888888", style=dashed];
  "v14" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "6" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "6" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x2101ec:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "17" -> "6" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "18" -> "6" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "19" -> "6" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "19" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "20" -> "19" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "21" -> "19" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "21" [label="const 0x4:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "20" [label="Load u32\n← ram", shape=box3d, fillcolor="#102030"];
  "22" -> "20" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "23" -> "20" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "23" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "24" -> "23" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "25" -> "23" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "25" [label="const 0xc:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "24" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "22" [label="StackStore u64\n→ ram[sp - 24]", shape=box3d, fillcolor="#20182a"];
  "26" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "27" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "24" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "27" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "27" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "29" -> "27" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "29" [label="const 0xffffffffffffffe8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "28" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "26" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "30" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "31" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "32" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "31" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "31" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "33" -> "31" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "33" [label="const 0xfffffffffffffff8:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "30" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "34" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "35" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "36" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "35" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "35" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "37" -> "35" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "37" [label="const 0xfffffffffffffff0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "34" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "18" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="Load u64\n← ram", shape=box3d, fillcolor="#102030"];
  "15" -> "17" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "38" -> "17" [color="#cc88ff", label=addr, fontcolor="#cccccc", fontsize=9];
  "38" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "24" -> "38" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "39" -> "38" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "39" [label="const 0x10:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "15" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "40" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "41" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "41" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "42" -> "41" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "42" [label="const 0xffffffffffffffe0:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "40" [label="StackStore u32\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "43" -> "40" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "41" -> "40" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "40" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "43" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "44" -> "43" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "45" -> "43" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "43" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "45" [label="Add:u64", shape=box, fillcolor="#2d2d2d"];
  "28" -> "45" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "46" -> "45" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "46" [label="const 0xffffffffffffffe4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "44" [label="StackStore u32\n→ ram[sp - 28]", shape=box3d, fillcolor="#20182a"];
  "22" -> "44" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "45" -> "44" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "20" -> "44" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "13" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="φ q0", shape=house, fillcolor="#163030"];
  "5" -> "11" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "47" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v48" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v48" [color="#888888", style=dashed];
  "v48" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "47" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="φ x1", shape=house, fillcolor="#163030"];
  "5" -> "10" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "18" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v49" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v49" [color="#888888", style=dashed];
  "v49" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "9" [label="φ x0", shape=house, fillcolor="#163030"];
  "5" -> "9" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "24" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v50" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v50" [color="#888888", style=dashed];
  "v50" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "8" [label="φ Mem", shape=house, fillcolor="#163030"];
  "5" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "15" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "6" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "19" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "51" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "51" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
