crates/strider/tests/snapshots/v2__aarch64be__complex__if_bit_clear_call.snap
---
source: crates/strider/tests/v2_baseline.rs
expression: snapshot_body
---
digraph "G" {
  graph [
    rankdir=TB,
    bgcolor="#1e1e1e",
    fontcolor=white,
  ];

  node [
    shape=box,
    style="filled,rounded",
    fillcolor="#2d2d2d",
    color="#888888",
    fontcolor=white,
    fontname=monospace,
    margin=0.2,
  ];

  edge [
    color="#aaaaaa",
    fontcolor=white,
    penwidth=1.2,
  ];

  "0" [label="Entry", shape=Mdiamond, fillcolor="#1a3a5c"];
  "1" [label="If", shape=diamond, fillcolor="#3a2a10"];
  "v2" [label="if.true", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v2" [color="#00cccc", label=true, fontcolor="#cccccc", fontsize=9];
  "v3" [label="if.false", shape=trapezium, fillcolor="#3a2a10"];
  "1" -> "v3" [color="#00cccc", label=false, fontcolor="#cccccc", fontsize=9];
  "0" -> "1" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "4" -> "1" [color="#ff44ff", label=cond, fontcolor="#cccccc", fontsize=9];
  "5" [label="ControlState", shape=invhouse, fillcolor="#2a1a4a"];
  "v3" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "6" -> "5" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "7" [label="Return", shape=doublecircle, fillcolor="#103a10"];
  "5" -> "7" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "8" -> "7" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "9" -> "7" [color="#88cc88", label=x0, fontcolor="#cccccc", fontsize=9];
  "10" -> "7" [color="#88cc88", label=x1, fontcolor="#cccccc", fontsize=9];
  "11" -> "7" [color="#88cc88", label=q0, fontcolor="#cccccc", fontsize=9];
  "12" -> "7" [color="#88cc88", label=q1, fontcolor="#cccccc", fontsize=9];
  "12" [label="φ q1", shape=house, fillcolor="#163030"];
  "5" -> "12" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "13" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v14" [label="Post Call\nq1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v14" [color="#888888", style=dashed];
  "v14" -> "12" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "6" [label="Call", shape=rarrow, fillcolor="#3a1010"];
  "v2" -> "6" [color="#00cccc", label=ctrl, fontcolor="#cccccc", fontsize=9];
  "15" -> "6" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "16" -> "6" [color="#ffdd44", label=target, fontcolor="#cccccc", fontsize=9];
  "16" [label="const 0x2101c4:u64", shape=ellipse, fillcolor="#2d2d2d"];
  "17" -> "6" [color="#ff8800", label=arg0, fontcolor="#cccccc", fontsize=9];
  "17" -> "6" [color="#ff8800", label=arg1, fontcolor="#cccccc", fontsize=9];
  "18" -> "6" [color="#ff8800", label=arg2, fontcolor="#cccccc", fontsize=9];
  "18" [label="And:u32", shape=box, fillcolor="#2d2d2d"];
  "19" -> "18" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "20" -> "18" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "20" [label="const 0x1:u32", shape=ellipse, fillcolor="#2d2d2d"];
  "19" [label="Truncate\nu64 → u32", shape=box, fillcolor="#2d2d2d"];
  "21" -> "19" [color="#88cc88", label=val, fontcolor="#cccccc", fontsize=9];
  "21" [label="arg[0] ← x0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "17" [label="arg[1] ← x1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "15" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "22" -> "15" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v23" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v23" -> "15" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "15" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "22" [label="StackStore u32\n→ ram[sp - 40]", shape=box3d, fillcolor="#20182a"];
  "24" -> "22" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v25" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v25" -> "22" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "18" -> "22" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "24" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "26" -> "24" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v27" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v27" -> "24" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "24" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "26" [label="StackStore u32\n→ ram[sp - 36]", shape=box3d, fillcolor="#20182a"];
  "28" -> "26" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v29" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v29" -> "26" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "26" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "28" [label="StackStore u64\n→ ram[sp - 32]", shape=box3d, fillcolor="#20182a"];
  "30" -> "28" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v31" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v31" -> "28" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "17" -> "28" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "30" [label="StackStore u32\n→ ram[sp - 20]", shape=box3d, fillcolor="#20182a"];
  "32" -> "30" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v33" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v33" -> "30" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "19" -> "30" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "32" [label="StackStore u64\n→ ram[sp - 8]", shape=box3d, fillcolor="#20182a"];
  "34" -> "32" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v35" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v35" -> "32" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "36" -> "32" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "36" [label="init\nx30", shape=Mdiamond, fillcolor="#1a3a5c"];
  "34" [label="StackStore u64\n→ ram[sp - 16]", shape=box3d, fillcolor="#20182a"];
  "37" -> "34" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "v38" [label="init\nsp", shape=Mdiamond, fillcolor="#1a3a5c"];
  "v38" -> "34" [color="#cc88ff", label=sp, fontcolor="#cccccc", fontsize=9];
  "39" -> "34" [color="#ff8800", label=data, fontcolor="#cccccc", fontsize=9];
  "39" [label="init\nx29", shape=Mdiamond, fillcolor="#1a3a5c"];
  "37" [label="InitialMemory", shape=Mdiamond, fillcolor="#1a3a5c"];
  "13" [label="init\nq1", shape=Mdiamond, fillcolor="#1a3a5c"];
  "11" [label="φ q0", shape=house, fillcolor="#163030"];
  "5" -> "11" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "40" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v41" [label="Post Call\nq0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v41" [color="#888888", style=dashed];
  "v41" -> "11" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "40" [label="init\nq0", shape=Mdiamond, fillcolor="#1a3a5c"];
  "10" [label="φ x1", shape=house, fillcolor="#163030"];
  "5" -> "10" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "17" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v42" [label="Post Call\nx1", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v42" [color="#888888", style=dashed];
  "v42" -> "10" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "9" [label="φ x0", shape=house, fillcolor="#163030"];
  "5" -> "9" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "21" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "v43" [label="Post Call\nx0", shape=box, fillcolor="#28102a", style="filled,dashed"];
  "6" -> "v43" [color="#888888", style=dashed];
  "v43" -> "9" [color="#dddddd", label=in, fontcolor="#cccccc", fontsize=9];
  "8" [label="φ Mem", shape=house, fillcolor="#163030"];
  "5" -> "8" [color="#dddddd", label=phi, fontcolor="#cccccc", fontsize=9];
  "15" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "6" -> "8" [color="#cc88aa", label=mem, fontcolor="#cccccc", fontsize=9];
  "4" [label="Equal\nu32 → bool", shape=box, fillcolor="#2d2d2d"];
  "18" -> "4" [color="#4488ff", label=lhs, fontcolor="#cccccc", fontsize=9];
  "44" -> "4" [color="#ff4444", label=rhs, fontcolor="#cccccc", fontsize=9];
  "44" [label="const 0x0:u32", shape=ellipse, fillcolor="#2d2d2d"];
}
